--- a/ASPNET_WEBSITE/Daniel_Pericas_Fernandez_PWA_Practica1css.css
+++ b/ASPNET_WEBSITE/Daniel_Pericas_Fernandez_PWA_Practica1css.css
@@ -29,12 +29,12 @@ position:relative;
 top:-100px;
 left:350px;
 }
-#NavButtonDiv ul{
+#Navul{
 list-style:none;
 display:inline;
 position:relative;
 top:70px;
-left:0px;
+left:10px;
 }
 #NavButtonDiv li{
 display:inline;
