--- a/RestaurantUOC/RestaurantUOC/RestaurantUOCcss.css
+++ b/RestaurantUOC/RestaurantUOC/RestaurantUOCcss.css
@@ -89,10 +89,10 @@ color:blue;
 }
 #novaresbutton{
 position:relative;
-top:20px;
+top:40px;
 left:100px;
 }
-#novaresbutton{
+.boto{
 width:100px;
 height:50px;
 }
@@ -126,7 +126,12 @@ text-align:center;
 width:200px;
 border:1px solid black;
 text-align:center;
-padding:10px;
+padding:20px 10px 20px 10px;
+}
+.treservas:hover
+{
+    background-color:grey;
+    color:White;
 }
 .reservaRegForm{
 position:relative;
